--- a/api/internal/helm/app/templates/ingress.yaml
+++ b/api/internal/helm/app/templates/ingress.yaml
@@ -1,19 +1,23 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: {{ .Values.appName }}
+  name: {{ .Values.name }}-ingress
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    cert-manager.io/cluster-issuer: "letsencrypt"
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: {{ .Values.appName }}
-  template:
-    metadata:
-      labels:
-        app: {{ .Values.appName }}
-    spec:
-      containers:
-      - name: {{ .Values.appName }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        ports:
-        - containerPort: {{ .Values.image.port }}
+  rules:
+    - host: {{ .Values.domain }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Values.name }}
+                port:
+                  number: 80
+  tls:
+    - hosts:
+        - {{ .Values.domain }}
+      secretName: {{ .Values.name }}-tls
