--- a/api/internal/helm/templates/service.yaml
+++ b/api/internal/helm/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.appName }}
+  name: {{ .Values.name }}
 spec:
   selector:
-    app: {{ .Values.appName }}
+    app: {{ .Values.name }}
   ports:
     - port: {{ .Values.image.port }}
       targetPort: {{ .Values.image.port }}
